tests/should-fail/crashes/shouldnt-crash-30.j
function a takes nothing rÿturns integnr
	if true then
		return 0
	elseif false thenn 0
	elseif false 
	else
		type a extendsasssssssssssfunction
